# polyglot

./: .gitignore  README.md  package.json  slides.md  slides_bkp.md  tutorial.md
.github/workflows/: deploy.yml
components/: BenchmarkRace.vue  BushEarsDemo.vue  BushfireDemo.vue  CaribeTechDemo.vue  CodeParticles.vue  EmbeddedApp.vue  InteractiveBingo.vue  LivePoll.vue  MemeSlot.vue  MerengueCycloneDemo.vue  OutbackDemo.vue  PerformanceMeter.vue  SubwayMap.vue  TerminalDemo.vue
docs/: MEME_GUIDE.md
projects/bush-ears/: CMakeLists.txt  README.md  pyproject.toml
projects/bush-ears/src/: main.cpp
projects/bush-ears/src/bush_ears/: __init__.py  cli.py  server.py
projects/bushfire-risk-modeler/: README.md  pyproject.toml
projects/bushfire-risk-modeler/src/: bushfire_engine.cpp  bushfire_engine.hpp  main.cpp
projects/bushfire-risk-modeler/src/bushfire_risk_modeler/: __init__.py  benchmarks.py  orchestrator.py  visualization.py
projects/bushfire-sim/: Cargo.toml  README.md  pyproject.toml
projects/bushfire-sim/src/: lib.rs
projects/bushfire-sim/src/bushfire_sim/: __init__.py  cli.py  server.py
projects/caribetech/: README.md  pyproject.toml
projects/caribetech/caribetech/: __init__.py  cli.py  server.py
projects/caribetech/caribetech.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projects/caribetech/src/: main.zig
projects/caribetech/src/caribetech.egg-info/: SOURCES.txt
projects/merengue-cyclone/: PRESENTATION_NOTES.md  README.md  build.py  demo.py  main.py  pyproject.toml  test_hurricane.py
projects/merengue-cyclone/merengue_cyclone/: __init__.py  cli.py  hurricane.py  server.py
projects/merengue-cyclone/merengue_cyclone/src/: hurricane.zig
projects/outback-monitor/: MANIFEST.in  README.md  main.py  pyproject.toml
projects/outback-monitor/outback_monitor/: __init__.py  cli.py  server.py
projects/outback-monitor/outback_monitor/static/: app.js  index.html
setup/: code-runner.ts
tutorials/: JS_TUTORIAL.md  RUST_TUTORIAL_PART1.md  RUST_TUTORIAL_PART2.md  RUST_TUTORIAL_PART3.md
