[project]
name = "bushfire-sim"
version = "0.1.0"
description = "Real-time bushfire spread simulation for Australian conditions"
readme = "README.md"
authors = [
    { name = "Ramon Perez", email = "ramonpzg@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.scripts]
bushfire-sim = "bushfire_sim.cli:main"

[tool.maturin]
module-name = "bushfire_sim._core"
python-packages = ["bushfire_sim"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
