[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caribetech"
version = "0.1.0"
description = "High-performance Caribbean hurricane tracking and meteorological calculations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "numpy>=1.21.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=1.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
caribetech = "caribetech.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["caribetech*"]

# [tool.pydust]
# name = "caribetech"
# sources = ["src/"]
# Note: Zig integration will be enabled once ziggy-pydust is properly configured

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
