[project]
name = "merengue-cyclone"
version = "0.1.0"
description = "High-performance hurricane track analysis and prediction using Zig-accelerated algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PyCon AU Demo", email = "demo@pycon.au" }
]
keywords = ["hurricane", "cyclone", "meteorology", "caribbean", "zig", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
    "matplotlib>=3.6.0",
    "ziglang>=0.11.0",
]

[project.scripts]
merengue-cyclone = "merengue_cyclone.cli:main"

[project.urls]
Repository = "https://github.com/pyconau/merengue-cyclone"
Documentation = "https://merengue-cyclone.readthedocs.io"

[build-system]
requires = ["hatchling", "ziglang>=0.11.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "merengue_cyclone/**/*.py",
    "merengue_cyclone/**/*.zig",
    "merengue_cyclone/static/**/*",
    "merengue_cyclone/data/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["merengue_cyclone"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
