[project]
name = "outback-monitor"
version = "0.1.0"
description = "Real-time agricultural monitoring dashboard for Australian conditions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
]

[project.scripts]
outback-monitor = "outback_monitor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["outback_monitor"]

[tool.hatch.build.targets.wheel.sources]
"outback_monitor" = "outback_monitor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
